[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "LPI-Monitoringzentrale"
version = "0.1.0"
description = "Ein LPI internes Monitoringtool."
authors = [{name = "Nico Dieckmann", email = "dieckmann@lpi-ing.de"}]
requires-python = ">= 3.10"
dependencies = [
    "matplotlib",
    "numpy"

]
readme = "README.md"
license = {file = "LICENSE"}

[project.optional-dependencies]
dev = ["black==22.12.0", "flake8==6.0.0"]

[project.scripts]
lpi-monitoringzentrale = "src.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]